// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Wizard.Step /> renders the step as completed 1`] = `
<li
  className="completed"
>
  <a
    href="#"
    onClick={[Function]}
  >
    my first step
    <i
      className="ico fa fa-check ico-green"
    />
  </a>
</li>
`;

exports[`<Wizard.Step /> renders the step as completed and locked 1`] = `
<li
  className="locked"
>
  <a
    href="#"
    onClick={[Function]}
  >
    my first step
    <i
      className="ico fa fa-lock ico-muted"
    />
  </a>
</li>
`;
